--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@simudin">
   <meta name="twitter:creator" content="@simudin">
-  <meta name="twitter:title" content="Lagu Parasmanan">
-  <meta name="twitter:url" content="http://simudin.github.io/slides/index.html">
-  <meta name="twitter:description" content="An instant wedding party music for your needs">
-  <meta name="twitter:image:src" content="http://simudin.github.io/assets/hasim.jpg">
+  <meta name="twitter:title" content="LaPar - Lagu Parasmanan">
+  <meta name="twitter:url" content="http://simudin.github.io/laguparasmanan/index.html">
+  <meta name="twitter:description" content="An instant wedding party's music for your needs">
+  <meta name="twitter:image:src" content="http://simudin.github.io/laguparasmanan/Mang_koko.jpg">
 
   <meta content="1463880640538728" property="fb:app_id">
   <meta content="simudin" property="og:site_name">
-  <meta content="Lagu Parasmanan" property="og:title">
+  <meta content="LaPar - Lagu Parasmanan" property="og:title">
   <meta content="article" property="og:type">
   <meta content="An instant wedding party music for your needs" property="og:description">
   <meta content="http://simudin.github.io/laguparasmanan/index.html" property="og:url">
   <meta content="http://simudin.github.io/about/" property="article:author">
-  <meta content="http://simudin.github.io/assets/hasim.jpg" property="og:image">
+  <meta content="http://simudin.github.io/laguparasmanan/Mang_koko.jpg" property="og:image">
   <link rel="stylesheet" href="dist/APlayer.min.css">
   <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
   <link rel="stylesheet" type="text/css" href="examples.css" />
@@ -134,7 +134,7 @@
         <div id="player1" class="aplayer"></div>
         <a href="https://twitter.com/share" class="twitter-share-button" data-via="simudin">Tweet</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-        <div class="fb-share-button" data-href="http://simudin.github.io/parasmanan/index.html" data-layout="button_count" style="position: relative; top: -8px; left: 33px;"></div>
+        <div class="fb-share-button" data-href="http://simudin.github.io/laguparasmanan/index.html" data-layout="button_count" style="position: relative; top: -8px; left: 33px;"></div>
       </div>
     </div>
   </div>
